# inscription_project

./: README.md  app.py  pyproject.toml  replit.nix
templates/: about.html  anuradhapura.html  faqs.html  footer.html  history.html  home.html  inscription.html  model01.html  model02.html  model03.html  navbar.html  polonnaruwa.html  temp.html  test.html  translate.html
