[tool.poetry]
name = "repl-nix-inscriptionproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_inscriptionproject"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
